--- a/RomRepoMgr/Views/SettingsDialog.axaml
+++ b/RomRepoMgr/Views/SettingsDialog.axaml
@@ -31,7 +31,7 @@
         xmlns:vm="clr-namespace:RomRepoMgr.ViewModels;assembly=RomRepoMgr"
         xmlns:resources="clr-namespace:RomRepoMgr.Resources"
         mc:Ignorable="d"
-        Width="480"
+        Width="540"
         Height="320"
         x:Class="RomRepoMgr.Views.SettingsDialog"
         Icon="/Assets/avalonia-logo.ico"
@@ -40,137 +40,129 @@
     <Design.DataContext>
         <vm:SettingsViewModel />
     </Design.DataContext>
-    <Border Padding="15">
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
-            <Grid Grid.Row="0"
-                  ColumnDefinitions="*,250,Auto">
-                <TextBlock Grid.Column="0"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Text="{x:Static resources:Localization.DatabaseFileLabel}"
-                           FontWeight="Bold"
-                           Padding="5" />
-                <TextBox Grid.Column="1"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Center"
-                         Text="{Binding DatabasePath, Mode=TwoWay}"
-                         IsReadOnly="True"
-                         Padding="5" />
-                <Button Grid.Column="2"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding DatabaseCommand, Mode=OneWay}"
-                        Padding="5">
-                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
-                </Button>
-            </Grid>
-            <Grid Grid.Row="1"
-                  ColumnDefinitions="*,250,Auto">
-                <TextBlock Grid.Column="0"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Text="{x:Static resources:Localization.RepositoryFolderLabel}"
-                           FontWeight="Bold"
-                           Padding="5" />
-                <TextBox Grid.Column="1"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Center"
-                         Text="{Binding RepositoryPath, Mode=TwoWay}"
-                         IsReadOnly="True"
-                         Padding="5" />
-                <Button Grid.Column="2"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding RepositoryCommand, Mode=OneWay}"
-                        Padding="5">
-                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
-                </Button>
-            </Grid>
-            <Grid Grid.Row="2"
-                  ColumnDefinitions="*,250,Auto">
-                <TextBlock Grid.Column="0"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Text="{x:Static resources:Localization.TemporaryFolderLabel}"
-                           FontWeight="Bold"
-                           Padding="5" />
-                <TextBox Grid.Column="1"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Center"
-                         Text="{Binding TemporaryPath, Mode=TwoWay}"
-                         IsReadOnly="True"
-                         Padding="5" />
-                <Button Grid.Column="2"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding TemporaryCommand, Mode=OneWay}"
-                        Padding="5">
-                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
-                </Button>
-            </Grid>
-            <CheckBox Grid.Row="3"
-                      IsChecked="{Binding UseInternalDecompressor, Mode=TwoWay}">
-                <CheckBox.Content>
-                    <TextBlock Text="{x:Static resources:Localization.UseInternalDecompressorLabel}" />
-                </CheckBox.Content>
-            </CheckBox>
-            <Grid Grid.Row="4"
-                  ColumnDefinitions="*,250,Auto"
-                  IsVisible="{Binding !UseInternalDecompressor}">
-                <TextBlock Grid.Column="0"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Text="{x:Static resources:Localization.UnArPathLabel}"
-                           FontWeight="Bold"
-                           Padding="5" />
-                <TextBox Grid.Column="1"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Center"
-                         Text="{Binding UnArPath, Mode=TwoWay}"
-                         IsReadOnly="True"
-                         Padding="5" />
-                <Button Grid.Column="2"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding UnArCommand, Mode=OneWay}"
-                        Padding="5">
-                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
-                </Button>
-            </Grid>
-            <TextBlock Grid.Row="5"
-                       HorizontalAlignment="Left"
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+          Margin="16"
+          RowSpacing="8">
+        <Grid Grid.Row="0"
+              ColumnDefinitions="*,250,Auto"
+              ColumnSpacing="8">
+            <TextBlock Grid.Column="0"
+                       HorizontalAlignment="Right"
                        VerticalAlignment="Center"
-                       Text="{Binding UnArVersion, Mode=OneWay}"
-                       FontWeight="Bold"
-                       IsVisible="{Binding !UseInternalDecompressor}" />
-            <Grid Grid.Row="6"
-                  ColumnDefinitions="Auto, *">
-                <TextBlock Grid.Column="0"
-                           VerticalAlignment="Center"
-                           Text="{x:Static resources:Localization.CompressionType}"
-                           FontWeight="Bold"
-                           Padding="5" />
-                <ComboBox Grid.Column="1"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Center"
-                          SelectedItem="{Binding Compression, Mode=TwoWay}"
-                          ItemsSource="{Binding CompressionTypes, Mode=OneWay}"
-                          Padding="5" />
-            </Grid>
-            <StackPanel Grid.Row="7"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                <Button HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding SaveCommand, Mode=OneWay}">
-                    <TextBlock Text="{x:Static resources:Localization.SaveLabel}" />
-                </Button>
-                <Button HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Command="{Binding CloseCommand, Mode=OneWay}">
-                    <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
-                </Button>
-            </StackPanel>
+                       Text="{x:Static resources:Localization.DatabaseFileLabel}"
+                       FontWeight="Bold" />
+            <TextBox Grid.Column="1"
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center"
+                     Text="{Binding DatabasePath, Mode=TwoWay}"
+                     IsReadOnly="True" />
+            <Button Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding DatabaseCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
+            </Button>
         </Grid>
-    </Border>
+        <Grid Grid.Row="1"
+              ColumnDefinitions="*,250,Auto"
+              ColumnSpacing="8">
+            <TextBlock Grid.Column="0"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Center"
+                       Text="{x:Static resources:Localization.RepositoryFolderLabel}"
+                       FontWeight="Bold" />
+            <TextBox Grid.Column="1"
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center"
+                     Text="{Binding RepositoryPath, Mode=TwoWay}"
+                     IsReadOnly="True" />
+            <Button Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding RepositoryCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
+            </Button>
+        </Grid>
+        <Grid Grid.Row="2"
+              ColumnDefinitions="*,250,Auto"
+              ColumnSpacing="8">
+            <TextBlock Grid.Column="0"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Center"
+                       Text="{x:Static resources:Localization.TemporaryFolderLabel}"
+                       FontWeight="Bold" />
+            <TextBox Grid.Column="1"
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center"
+                     Text="{Binding TemporaryPath, Mode=TwoWay}"
+                     IsReadOnly="True" />
+            <Button Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding TemporaryCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
+            </Button>
+        </Grid>
+        <CheckBox Grid.Row="3"
+                  IsChecked="{Binding UseInternalDecompressor, Mode=TwoWay}">
+            <CheckBox.Content>
+                <TextBlock Text="{x:Static resources:Localization.UseInternalDecompressorLabel}" />
+            </CheckBox.Content>
+        </CheckBox>
+        <Grid Grid.Row="4"
+              ColumnDefinitions="*,250,Auto"
+              ColumnSpacing="8"
+              IsVisible="{Binding !UseInternalDecompressor}">
+            <TextBlock Grid.Column="0"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Center"
+                       Text="{x:Static resources:Localization.UnArPathLabel}"
+                       FontWeight="Bold" />
+            <TextBox Grid.Column="1"
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center"
+                     Text="{Binding UnArPath, Mode=TwoWay}"
+                     IsReadOnly="True" />
+            <Button Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding UnArCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
+            </Button>
+        </Grid>
+        <TextBlock Grid.Row="5"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   Text="{Binding UnArVersion, Mode=OneWay}"
+                   FontWeight="Bold"
+                   IsVisible="{Binding !UseInternalDecompressor}" />
+        <Grid Grid.Row="6"
+              ColumnDefinitions="Auto, *"
+              ColumnSpacing="8">
+            <TextBlock Grid.Column="0"
+                       VerticalAlignment="Center"
+                       Text="{x:Static resources:Localization.CompressionType}"
+                       FontWeight="Bold" />
+            <ComboBox Grid.Column="1"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Center"
+                      SelectedItem="{Binding Compression, Mode=TwoWay}"
+                      ItemsSource="{Binding CompressionTypes, Mode=OneWay}" />
+        </Grid>
+        <StackPanel Grid.Row="7"
+                    Spacing="8"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right">
+            <Button HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding SaveCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.SaveLabel}" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Command="{Binding CloseCommand, Mode=OneWay}">
+                <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
+            </Button>
+        </StackPanel>
+    </Grid>
 </Window>
