--- a/RomRepoMgr/Views/UpdateStats.axaml
+++ b/RomRepoMgr/Views/UpdateStats.axaml
@@ -33,138 +33,137 @@
         mc:Ignorable="d"
         x:Class="RomRepoMgr.Views.UpdateStats"
         Icon="/Assets/avalonia-logo.ico"
-        CanResize="False"
         Title="{x:Static resources:Localization.UpdateStatsTitle}"
         WindowStartupLocation="CenterOwner">
     <Design.DataContext>
         <vm:UpdateStatsViewModel />
     </Design.DataContext>
-    <Border Padding="15">
-        <Grid RowDefinitions="Auto,Auto,*,Auto">
-            <TextBlock Grid.Row="0"
-                       Text="{Binding StatusMessage, Mode=OneWay}"
-                       HorizontalAlignment="Center" />
-            <ProgressBar Grid.Row="1"
-                         IsIndeterminate="{Binding IndeterminateProgress, Mode=OneWay}"
-                         Maximum="{Binding MaximumValue, Mode=OneWay}"
-                         Minimum="{Binding MinimumValue, Mode=OneWay}"
-                         Value="{Binding CurrentValue, Mode=OneWay}"
-                         HorizontalAlignment="Stretch"
-                         IsVisible="{Binding ProgressVisible, Mode=OneWay}" />
-            <DataGrid Grid.Row="2"
-                      ItemsSource="{Binding RomSets, Mode=OneWay}"
-                      HorizontalScrollBarVisibility="Visible"
-                      SelectedItem="{Binding SelectedRomSet, Mode=TwoWay}"
-                      CanUserSortColumns="True"
-                      CanUserResizeColumns="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetNameLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Version, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetVersionLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Author, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetAuthorLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Category, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetCategoryLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Date, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetDateLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Description, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetDescriptionLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Comment, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetCommentLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Homepage, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.HomepageLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding TotalMachines, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetTotalMachinesLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding CompleteMachines, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetCompleteMachinesLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding IncompleteMachines, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetIncompleteMachinesLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding TotalRoms, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetTotalRomsLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding HaveRoms, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetHaveRomsLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding MissRoms, Mode=OneWay}"
-                                        Width="Auto"
-                                        IsReadOnly="True">
-                        <DataGridTextColumn.Header>
-                            <TextBlock Text="{x:Static resources:Localization.RomSetMissRomsLabel}" />
-                        </DataGridTextColumn.Header>
-                    </DataGridTextColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-            <Button Grid.Row="3"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    IsEnabled="{Binding CanClose, Mode=OneWay}"
-                    Command="{Binding CloseCommand, Mode=OneWay}">
-                <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
-            </Button>
-        </Grid>
-    </Border>
+    <Grid RowDefinitions="Auto,Auto,*,Auto"
+          Margin="16"
+          RowSpacing="8">
+        <TextBlock Grid.Row="0"
+                   Text="{Binding StatusMessage, Mode=OneWay}"
+                   HorizontalAlignment="Center" />
+        <ProgressBar Grid.Row="1"
+                     IsIndeterminate="{Binding IndeterminateProgress, Mode=OneWay}"
+                     Maximum="{Binding MaximumValue, Mode=OneWay}"
+                     Minimum="{Binding MinimumValue, Mode=OneWay}"
+                     Value="{Binding CurrentValue, Mode=OneWay}"
+                     HorizontalAlignment="Stretch"
+                     IsVisible="{Binding ProgressVisible, Mode=OneWay}" />
+        <DataGrid Grid.Row="2"
+                  ItemsSource="{Binding RomSets, Mode=OneWay}"
+                  HorizontalScrollBarVisibility="Visible"
+                  SelectedItem="{Binding SelectedRomSet, Mode=TwoWay}"
+                  CanUserSortColumns="True"
+                  CanUserResizeColumns="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetNameLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Version, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetVersionLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Author, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetAuthorLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Category, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetCategoryLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Date, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetDateLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Description, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetDescriptionLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Comment, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetCommentLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Homepage, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.HomepageLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding TotalMachines, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetTotalMachinesLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding CompleteMachines, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetCompleteMachinesLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding IncompleteMachines, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetIncompleteMachinesLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding TotalRoms, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetTotalRomsLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding HaveRoms, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetHaveRomsLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding MissRoms, Mode=OneWay}"
+                                    Width="Auto"
+                                    IsReadOnly="True">
+                    <DataGridTextColumn.Header>
+                        <TextBlock Text="{x:Static resources:Localization.RomSetMissRomsLabel}" />
+                    </DataGridTextColumn.Header>
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button Grid.Row="3"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                IsEnabled="{Binding CanClose, Mode=OneWay}"
+                Command="{Binding CloseCommand, Mode=OneWay}">
+            <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
+        </Button>
+    </Grid>
 </Window>
