[Blazor] Always use dark mode.

--- a/RomRepoMgr.Blazor/Components/Routes.razor
+++ b/RomRepoMgr.Blazor/Components/Routes.razor
@@ -1,6 +1,8 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
-    <Found Context="routeData">
-        <RouteView DefaultLayout="typeof(Layout.MainLayout)" RouteData="routeData"/>
-        <FocusOnNavigate RouteData="routeData" Selector="h1"/>
-    </Found>
-</Router>
+﻿<FluentDesignTheme StorageName="theme" Mode="DesignThemeModes.Dark">
+    <Router AppAssembly="typeof(Program).Assembly">
+        <Found Context="routeData">
+            <RouteView DefaultLayout="typeof(Layout.MainLayout)" RouteData="routeData"/>
+            <FocusOnNavigate RouteData="routeData" Selector="h1"/>
+        </Found>
+    </Router>
+</FluentDesignTheme>
