[Blazor] Add menu of actions.

--- a/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
+++ b/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
@@ -2,10 +2,9 @@
 
 <FluentLayout>
     <FluentHeader>
-        RomRepoMgr.Blazor
+        ROM Repository Manager
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
-        <NavMenu/>
         <FluentBodyContent Class="body-content">
             <div class="content">
                 @Body
