--- a/RomRepoMgr.Blazor/Components/Pages/Home.razor
+++ b/RomRepoMgr.Blazor/Components/Pages/Home.razor
@@ -1,7 +1,11 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>ROM Repository Manager</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new Fluent Blazor app.
+<FluentToolbar>
+    <FluentButton Disabled="true">Import DATs</FluentButton>
+    <FluentButton Disabled="true">Export DAT</FluentButton>
+    <FluentButton Disabled="true">Remove DAT</FluentButton>
+    <FluentButton Disabled="true">Import ROMs</FluentButton>
+    <FluentButton Disabled="true">Export ROMs</FluentButton>
+</FluentToolbar>
