[Blazor] Enable site wide server side rendering.

--- a/RomRepoMgr.Blazor/Components/App.razor
+++ b/RomRepoMgr.Blazor/Components/App.razor
@@ -9,11 +9,11 @@
     <link href="@Assets["RomRepoMgr.Blazor.styles.css"]" rel="stylesheet"/>
     <ImportMap/>
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
-    <HeadOutlet/>
+    <HeadOutlet @rendermode="InteractiveServer"/>
 </head>
 
 <body>
-<Routes/>
+<Routes @rendermode="InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 </body>
 
