[Blazor] Implement importing DAT folder.

--- a/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
+++ b/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
@@ -16,6 +16,7 @@
         <FluentSpacer/>
         <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
     </FluentFooter>
+    <FluentDialogProvider/>
 </FluentLayout>
 
 <div data-nosnippet id="blazor-error-ui">
