[Blazor] Update footer.

--- a/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
+++ b/RomRepoMgr.Blazor/Components/Layout/MainLayout.razor
@@ -12,9 +12,7 @@
         </FluentBodyContent>
     </FluentStack>
     <FluentFooter>
-        <a href="https://www.fluentui-blazor.net" target="_blank">Documentation and demos</a>
-        <FluentSpacer/>
-        <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
+        <a href="https://www.natportillo.es" target="_blank">Copyright © 2020-2025 Natalia Portillo</a>
     </FluentFooter>
     <FluentDialogProvider/>
 </FluentLayout>
