[Blazor] Implement importing ROMs.

--- a/RomRepoMgr.Blazor/Components/Pages/Home.razor
+++ b/RomRepoMgr.Blazor/Components/Pages/Home.razor
@@ -10,7 +10,7 @@
     <FluentButton OnClick="@ImportDatsAsync">Import DATs</FluentButton>
     <FluentButton Disabled="true">Export DAT</FluentButton>
     <FluentButton Disabled="true">Remove DAT</FluentButton>
-    <FluentButton Disabled="true">Import ROMs</FluentButton>
+    <FluentButton OnClick="@ImportRomsAsync">Import ROMs</FluentButton>
     <FluentButton Disabled="true">Export ROMs</FluentButton>
 </FluentToolbar>
 
